# telecom-engineering-portfolio

./: .gitignore  LICENSE  README.md
semester-1/PRG1/classes/aprovado/: aprovado  aprovado.c
semester-1/PRG1/classes/arranjo/: histograma.c
semester-1/PRG1/classes/arranjosmultidemensionais/: baralho.c  matriz  matriz.c
semester-1/PRG1/classes/caixas/: caixas  caixas.c
semester-1/PRG1/classes/calculadora/: calculadora  calculadora.c
semester-1/PRG1/classes/conversãopésepolegadas/: altura  metros_para_pesplegada.c  metrosparaaltura  pespolegada_para_metros.c  pespolegadaparametros
semester-2/ELD1/display-7seg/: display7seg.qar  display7seg.vhd
semester-2/ELD1/finalproject/: BCD2SSD.qar  BCD2SSD.vhd
semester-2/ELD1/gray2bin/: gray2bin.qar  gray2bin.vhd
semester-2/ELD1/homework/: Ckt74161.qar
semester-2/ELD1/mux/: mux4x1.qar  mux4x1.vhd
semester-2/PRG2/data-structure/: CMakeLists.txt  Readme.md  Testes.md  teste.c
semester-2/PRG2/data-structure/libprg/: CMakeLists.txt
semester-2/PRG2/data-structure/libprg/src/include/libprg/: apb.h  fila.h  libprg.h  linearhash.h  lista.h  lista_linear.h  pilha.h  thash.h
semester-2/PRG2/data-structure/libprg/src/libprg/: apb.c  fila.c  linearhash.c  lista.c  lista_linear.c  pilha.c  thash.c
semester-3/CAN/classes/: class1.m  class10.m  class11.m  class12.m  class13.m  class2.m  class3.m  class4.m  class5.m  class6.m  class7.m  class8.m  class9.m
semester-3/ELD2/finalproject1/: main.typ
semester-3/ELD2/finalproject2/: main.typ
semester-3/ELD2/homework1/: main.typ
semester-3/ELD2/homework2/: homework.typ
semester-3/ELD2/homework3/: homework.typ
semester-3/FSC3/lab-3/: main.typ
semester-3/MEC/finalproject/: main.typ
semester-3/POO/finalproject1/: .gitignore  README.md  settings.gradle
semester-3/POO/finalproject2/: README.md
semester-4/AOC/classes/: note1.txt
semester-4/AOC/notes-25-08-25/: notes.txt
semester-4/AOC/rudi_calculator/: rudi_sem_decode.qar
semester-4/SIN/lab1/: homework.typ  lab1.m  lab1ex.m
semester-4/SIN/lab2/: homework.m
semester-4/SIN/lab3/: homework.m
(+262 files in other folders)
